tests/new_react/new_react.exp
Error: bad_default_props.js:7
  7: class C1 extends React.Component<T1, T2, any> { // error
                                      ^^ object type. This type is incompatible with
  7: class C1 extends React.Component<T1, T2, any> { // error
                                      ^^ undefined. Did you forget to declare T1?

Error: bad_default_props.js:7
  7: class C1 extends React.Component<T1, T2, any> { // error
                                      ^^ undefined. Did you forget to declare T1?. This type is incompatible with
  7: class C1 extends React.Component<T1, T2, any> { // error
                                      ^^ object type

Error: bad_default_props.js:24
 24: class C5 extends React.Component<T2, T3, any> { // error
                                      ^^ object type. This type is incompatible with
 24: class C5 extends React.Component<T2, T3, any> { // error
                                      ^^ undefined. Did you forget to declare T2?

Error: bad_default_props.js:24
 24: class C5 extends React.Component<T2, T3, any> { // error
                                      ^^ undefined. Did you forget to declare T2?. This type is incompatible with
 24: class C5 extends React.Component<T2, T3, any> { // error
                                      ^^ object type

Error: classes.js:17
 17:     var _: string = this.props.x;
                         ^^^^^^^^^^^^ number. This type is incompatible with
 17:     var _: string = this.props.x;
                ^^^^^^ string

Error: classes.js:22
 22:     this.state = { y: "" };
                      ^^^^^^^^^ object literal. This type is incompatible with
 22:     this.state = { y: "" };
         ^^^^^^^^^^ object type
  Property `y` is incompatible:
     22:     this.state = { y: "" };
                               ^^ string. This type is incompatible with
      5: type State = { y: number };
                           ^^^^^^ number

Error: classes.js:25
 25:   setState(o: { y_: string }): void { }
                   ^^^^^^^^^^^^^^ property `y_`. Property not found in
  9:   state: State;
              ^^^^^ object type

Error: classes.js:40
 40: Foo.defaultProps = 0;
     ^^^^^^^^^^^^^^^^ assignment of property `defaultProps`
 40: Foo.defaultProps = 0;
                        ^ number. This type is incompatible with
 40: Foo.defaultProps = 0;
     ^^^^^^^^^^^^^^^^ object type

Error: classes.js:41
 41: var foo: $jsx<number> = <Foo/>;
                             ^^^^^^ React element `Foo`
  8:   props: Props;
              ^^^^^ property `x`. Property not found in
 41: var foo: $jsx<number> = <Foo/>;
                             ^^^^^^ props of React element `Foo`

Error: classes.js:41
 41: var foo: $jsx<number> = <Foo/>;
                             ^^^^^^ React element `Foo`
 41: var foo: $jsx<number> = <Foo/>;
                   ^^^^^^ number. This type is incompatible with
  4: type _ReactNode<DefaultProps, Props, Config: $Diff<Props, DefaultProps>, C: React$Component<DefaultProps, Props, any>> = React$Node<Config>;
                                                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React$Component. See lib: fakelib/type_aliases.js:4

Error: classes.js:59
 59:     var _: string = this.props.x;
                         ^^^^^^^^^^^^ number. This type is incompatible with
 59:     var _: string = this.props.x;
                ^^^^^^ string

Error: classes.js:66
 66:   setState(o: { y_: string }): void { },
                   ^^^^^^^^^^^^^^ property `y_`. Property not found in
                      v------------------
 62:   getInitialState(): { y: string } {
 63:     return { y: "" };
 64:   },
       ^ object type

Error: classes.js:81
 81: var foo_legacy: $jsx<number> = <FooLegacy/>;
                                    ^^^^^^^^^^^^ React element `FooLegacy`
                  v
 48:   propTypes: {
 49:     x: React.PropTypes.number.isRequired
 50:   },
       ^ property `x`. Property not found in
 81: var foo_legacy: $jsx<number> = <FooLegacy/>;
                                    ^^^^^^^^^^^^ props of React element `FooLegacy`

Error: classes.js:81
 81: var foo_legacy: $jsx<number> = <FooLegacy/>;
                                    ^^^^^^^^^^^^ React element `FooLegacy`
 81: var foo_legacy: $jsx<number> = <FooLegacy/>;
                          ^^^^^^ number. This type is incompatible with
  4: type _ReactNode<DefaultProps, Props, Config: $Diff<Props, DefaultProps>, C: React$Component<DefaultProps, Props, any>> = React$Node<Config>;
                                                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React$Component. See lib: fakelib/type_aliases.js:4

Error: classes.js:81
 81: var foo_legacy: $jsx<number> = <FooLegacy/>;
                                    ^^^^^^^^^^^^ React element `FooLegacy`
 81: var foo_legacy: $jsx<number> = <FooLegacy/>;
                                    ^^^^^^^^^^^^ props of React element `FooLegacy`. Expected object instead of
 80: FooLegacy.defaultProps = 0;
                              ^ number

Error: import-react.js:18
 18: <HelloMessage name={007} />; // number ~/~> string error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ props of React element `HelloMessage`. This type is incompatible with
 15:   props: { name: string };
              ^^^^^^^^^^^^^^^^ object type
  Property `name` is incompatible:
     18: <HelloMessage name={007} />; // number ~/~> string error
                             ^^^ number. This type is incompatible with
     15:   props: { name: string };
                          ^^^^^^ string

Error: new_react.js:17
 17:         var foo: string = this.state;
                               ^^^^^^^^^^ null. This type is incompatible with
 17:         var foo: string = this.state;
                      ^^^^^^ string

Error: new_react.js:18
 18:         var bar: string = this.props;
                               ^^^^^^^^^^ propTypes of React component. This type is incompatible with
 18:         var bar: string = this.props;
                      ^^^^^^ string

Error: new_react.js:19
 19:         var qux: string = this.props.z;
                               ^^^^^^^^^^^^ number. This type is incompatible with
 19:         var qux: string = this.props.z;
                      ^^^^^^ string

Error: new_react.js:19
 19:         var qux: string = this.props.z;
                               ^^^^^^^^^^^^ undefined. This type is incompatible with
 19:         var qux: string = this.props.z;
                      ^^^^^^ string

Error: new_react.js:20
 20:         var w:number = this.props.x;
                            ^^^^^^^^^^^^ string. This type is incompatible with
 20:         var w:number = this.props.x;
                   ^^^^^^ number

Error: new_react.js:21
 21:         this.props.y[0];
             ^^^^^^^^^^^^^^^ access of computed property/element. Computed property/element cannot be accessed on possibly undefined value
 21:         this.props.y[0];
             ^^^^^^^^^^^^ undefined

Error: new_react.js:29
 29: var element = <C x = {0}/>;
                   ^^^^^^^^^^^^ props of React element `C`. This type is incompatible with
                    v
  5:     propTypes: {
  6:         x: React.PropTypes.string.isRequired,
  7:         y: React.PropTypes.array,
  8:         z: React.PropTypes.number
  9:     },
         ^ propTypes of React component
  Property `x` is incompatible:
     29: var element = <C x = {0}/>;
                               ^ number. This type is incompatible with
      6:         x: React.PropTypes.string.isRequired,
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string

Error: new_react.js:30
 30: var element_ = <C/>;
                    ^^^^ React element `C`
                    v
  5:     propTypes: {
  6:         x: React.PropTypes.string.isRequired,
  7:         y: React.PropTypes.array,
  8:         z: React.PropTypes.number
  9:     },
         ^ property `x`. Property not found in
 30: var element_ = <C/>;
                    ^^^^ props of React element `C`

Error: new_react.js:32
 32: var x: number = C.displayName;
                     ^^^^^^^^^^^^^ string. This type is incompatible with
 32: var x: number = C.displayName;
            ^^^^^^ number

Error: propTypes.js:13
     v---------------
 13: <C statistics={[
 14:   {},
 15:   {label:"",value:undefined},
 16: ]}/>; // error (label is required, value not required)
     ---^ React element `C`
                                       v----------------
  6:     statistics: PropTypes.arrayOf(PropTypes.shape({
  7:       label: PropTypes.string.isRequired,
  8:       value: PropTypes.number,
  9:     })).isRequired,
         -^ property `label`. Property not found in
 14:   {},
       ^^ object literal

Error: propTypes.js:18
 18: var props: Array<{label: string, value?: number}> = [
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `label`. Property not found in
 19:   {},
       ^^ object literal

Error: props.js:14
 14:         var a: number = this.props.x; // error
                             ^^^^^^^^^^^^ string. This type is incompatible with
 14:         var a: number = this.props.x; // error
                    ^^^^^^ number

Error: props.js:14
 14:         var a: number = this.props.x; // error
                             ^^^^^^^^^^^^ undefined. This type is incompatible with
 14:         var a: number = this.props.x; // error
                    ^^^^^^ number

Error: props.js:15
 15:         var b: string = this.props.y; // error
                                        ^ property `y`. Property not found in
 15:         var b: string = this.props.y; // error
                             ^^^^^^^^^^ propTypes of React component

Error: props.js:16
 16:         var c: string = this.props.z; // error
                             ^^^^^^^^^^^^ number. This type is incompatible with
 16:         var c: string = this.props.z; // error
                    ^^^^^^ string

Error: props.js:16
 16:         var c: string = this.props.z; // error
                             ^^^^^^^^^^^^ undefined. This type is incompatible with
 16:         var c: string = this.props.z; // error
                    ^^^^^^ string

Error: props.js:20
 20: var element = <TestProps x={false} y={false} z={false} />; // 3 errors
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element `TestProps`
 27: (element: $jsx<FooProps>);
      ^^^^^^^ React$Element. This type is incompatible with
 27: (element: $jsx<FooProps>);
               ^^^^^^^^^^^^^^ union: type application of class `React$Element` | string | number | type application of identifier `Iterable`
  Member 1:
   13:   | React$Element<Config>
           ^^^^^^^^^^^^^^^^^^^^^ type application of class `React$Element`. See lib: <BUILTINS>/react.js:13
  Error:
   25:     propTypes: { w: React.PropTypes.string.isRequired }
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `w`. Property not found in
   20: var element = <TestProps x={false} y={false} z={false} />; // 3 errors
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props of React element `TestProps`
  Member 2:
   14:   | string
           ^^^^^^ string. See lib: <BUILTINS>/react.js:14
  Error:
   27: (element: $jsx<FooProps>);
        ^^^^^^^ React$Element. This type is incompatible with
   14:   | string
           ^^^^^^ string. See lib: <BUILTINS>/react.js:14
  Member 3:
   15:   | number
           ^^^^^^ number. See lib: <BUILTINS>/react.js:15
  Error:
   27: (element: $jsx<FooProps>);
        ^^^^^^^ React$Element. This type is incompatible with
   15:   | number
           ^^^^^^ number. See lib: <BUILTINS>/react.js:15
  Member 4:
   16:   | Iterable<React$Node<Config>>;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type application of identifier `Iterable`. See lib: <BUILTINS>/react.js:16
  Error:
   16:   | Iterable<React$Node<Config>>;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `@@iterator` of $Iterable. Property not found in. See lib: <BUILTINS>/react.js:16
   27: (element: $jsx<FooProps>);
        ^^^^^^^ React$Element

Error: props.js:20
 20: var element = <TestProps x={false} y={false} z={false} />; // 3 errors
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props of React element `TestProps`. This type is incompatible with
                    v
  4:     propTypes: {
  5:         x: React.PropTypes.string,
  6:         z: React.PropTypes.number
  7:     },
         ^ propTypes of React component
  Property `z` is incompatible:
     20: var element = <TestProps x={false} y={false} z={false} />; // 3 errors
                                                         ^^^^^ boolean. This type is incompatible with
      6:         z: React.PropTypes.number
                    ^^^^^^^^^^^^^^^^^^^^^^ number

Error: props.js:20
 20: var element = <TestProps x={false} y={false} z={false} />; // 3 errors
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props of React element `TestProps`
 20: var element = <TestProps x={false} y={false} z={false} />; // 3 errors
                                 ^^^^^ boolean. This type is incompatible with
 10:         return {x: '', y: 0}
                        ^^ string

Error: props.js:20
 20: var element = <TestProps x={false} y={false} z={false} />; // 3 errors
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props of React element `TestProps`
 20: var element = <TestProps x={false} y={false} z={false} />; // 3 errors
                                           ^^^^^ boolean. This type is incompatible with
 10:         return {x: '', y: 0}
                               ^ number

Error: props2.js:14
 14:         var s: string = this.state.bar;
                             ^^^^^^^^^^^^^^ number. This type is incompatible with
 14:         var s: string = this.state.bar;
                    ^^^^^^ string

Error: props2.js:15
 15:         return <C {...this.state} foo = {0} />;
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props of React element `C`. This type is incompatible with
                    v
  3:     propTypes: {
  4:         foo: React.PropTypes.string.isRequired,
  5:         bar: React.PropTypes.string.isRequired,
  6:     }
         ^ propTypes of React component
  Property `bar` is incompatible:
      9:     getInitialState: function(): { bar: number } {
                                                 ^^^^^^ number. This type is incompatible with
      5:         bar: React.PropTypes.string.isRequired,
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string

Error: props2.js:15
 15:         return <C {...this.state} foo = {0} />;
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props of React element `C`. This type is incompatible with
                    v
  3:     propTypes: {
  4:         foo: React.PropTypes.string.isRequired,
  5:         bar: React.PropTypes.string.isRequired,
  6:     }
         ^ propTypes of React component
  Property `foo` is incompatible:
     15:         return <C {...this.state} foo = {0} />;
                                                  ^ number. This type is incompatible with
      4:         foo: React.PropTypes.string.isRequired,
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string

Error: props3.js:49
 49:       bad_one: React.PropTypes.imaginaryType,
                                    ^^^^^^^^^^^^^ property `imaginaryType`. Property not found in
 49:       bad_one: React.PropTypes.imaginaryType,
                    ^^^^^^^^^^^^^^^ object type

Error: props3.js:50
 50:       bad_two: React.PropTypes.string.inRequired,
                                           ^^^^^^^^^^ property `inRequired`. Property not found in
 50:       bad_two: React.PropTypes.string.inRequired,
                    ^^^^^^^^^^^^^^^^^^^^^^ object type

Error: props4.js:14
 14: <JDiv id={42} />;
     ^^^^^^^^^^^^^^^^ props of React element `JDiv`. This type is incompatible with
              v
  8:   props: {
  9:     id: string
 10:   };
       ^ object type
  Property `id` is incompatible:
     14: <JDiv id={42} />;
                   ^^ number. This type is incompatible with
      9:     id: string
                 ^^^^^^ string

Error: props4.js:17
 17:   props: { bar: string };
              ^^^^^^^^^^^^^^^ property `bar`. Property not found in
 25:   <Example foo="foo" />,
       ^^^^^^^^^^^^^^^^^^^^^ props of React element `Example`

Error: state.js:19
 19:                 {this.state.bar.qux}
                                     ^^^ property `qux`. Property cannot be accessed on possibly null value
 19:                 {this.state.bar.qux}
                      ^^^^^^^^^^^^^^ null

Error: state.js:19
 19:                 {this.state.bar.qux}
                                     ^^^ property `qux`. Property cannot be accessed on possibly undefined value
 19:                 {this.state.bar.qux}
                      ^^^^^^^^^^^^^^ undefined

Error: state3.js:11
 11:         var a: number = this.state.x; // error
                             ^^^^^^^^^^^^ string. This type is incompatible with
 11:         var a: number = this.state.x; // error
                    ^^^^^^ number

Error: state3.js:13
             v--------------
 13:         this.setState({
 14:             x: false // error
 15:         })
             -^ call of method `setState`
 14:             x: false // error
                    ^^^^^ boolean. This type is incompatible with
  4:     getInitialState: function(): { x: string; } {
                                           ^^^^^^ string

Error: state4.js:9
  9:     this.setState({ y: 0 });
         ^^^^^^^^^^^^^^^^^^^^^^^ call of method `setState`
  9:     this.setState({ y: 0 });
                       ^^^^^^^^ property `y` of object literal. Property not found in
                        v--------------------------
  4:   getInitialState: function(): { x: number } {
  5:     return { x: 0 };
  6:   },
       ^ object type

Error: state4.js:10
 10:     return <div>{this.state.z}</div>
                                 ^ property `z`. Property not found in
 10:     return <div>{this.state.z}</div>
                      ^^^^^^^^^^ object type

Error: state5.js:5
  5:     return this.state.x; // error: need to declare type of state
                           ^ property `x`. Property cannot be accessed on possibly undefined value
  5:     return this.state.x; // error: need to declare type of state
                ^^^^^^^^^^ undefined. Did you forget to declare type parameter `State` of property `Component`?


Found 50 errors
